# cl-to-airtable

./: README.md  cl-to-airtable.cabal  example.json  stack.yaml
src/: Main.hs
