name:                cl-to-airtable
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable cl-to-airtable
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5,
                       scalpel,
                       text,
                       req,
                       bytestring,
                       aeson,
                       monad-extras,
                       mtl,
                       optparse-applicative,
                       megaparsec,
                       void
